--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,100 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f2bbc1">  <td>24/10/27 00:30:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.logoutFromSalesforce()[pri:0, instance:com.automation.tests.AutomationScripts@4c1909a3]">logoutFromSalesforce</td> 
+<tr bgcolor="7d87ba">  <td>24/10/27 22:34:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.CheckBox()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">CheckBox</td> 
   <td>main@1433867275</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>24/10/27 00:30:39</td>   <td>-3049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@4c1909a3]">&gt;&gt;setUpBeforeMethod</td> 
+<tr bgcolor="7d87ba">  <td>24/10/27 22:34:30</td>   <td>13661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.CreateNewOpp()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">CreateNewOpp</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:34:47</td>   <td>30894</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.CreateNewView()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">CreateNewView</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:35:02</td>   <td>46122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.DeveloperConsole()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">DeveloperConsole</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:35:16</td>   <td>60069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.EditView()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">EditView</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:35:33</td>   <td>76502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.LogOutMenu()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">LogOutMenu</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:35:52</td>   <td>95461</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.Opportunitydd()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">Opportunitydd</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:36:08</td>   <td>111806</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.UserMenu()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">UserMenu</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:36:22</td>   <td>125285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.UsernameField()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">UsernameField</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:36:32</td>   <td>135563</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.createAcc()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">createAcc</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:36:56</td>   <td>159304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.loginHomePage()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">loginHomePage</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:37:10</td>   <td>173392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.loginToSalesforce()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">loginToSalesforce</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:37:18</td>   <td>181855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.loginerrormsg()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">loginerrormsg</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
-<tr bgcolor="fa7c99">  <td>24/10/27 00:30:46</td>   <td>4043</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@4c1909a3]">&lt;&lt;tearDownAfterMethod</td> 
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
 <td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:37:55</td>   <td>218719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestTG.setUpBeforeMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&gt;&gt;setUpBeforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="b19bbd">  <td>24/10/27 22:38:07</td>   <td>230874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestTG.tearDownAfterMethod()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">&lt;&lt;tearDownAfterMethod</td> 
+<td>&nbsp;</td>  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:37:25</td>   <td>188486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.testLeadsTab()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">testLeadsTab</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:37:41</td>   <td>205095</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.testStuckOpportunitiesReport()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">testStuckOpportunitiesReport</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
+<tr bgcolor="7d87ba">  <td>24/10/27 22:37:58</td>   <td>221364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AutomationScripts.verifyOpportunityInTable()[pri:0, instance:com.automation.tests.AutomationScripts@625e134e]">verifyOpportunityInTable</td> 
+  <td>main@1433867275</td>   <td></td> </tr>
 </table>
